Fill database with plist files, bug fix for correct data showing

--- a/RecycleProject/Database/Composite.plist
+++ b/RecycleProject/Database/Composite.plist
@@ -4,23 +4,43 @@
 <array>
 	<dict>
 		<key>code</key>
-		<integer>1</integer>
+		<integer>81</integer>
 		<key>numberOfRecyclePoints</key>
 		<integer>0</integer>
 		<key>shortName</key>
-		<string>PET</string>
+		<string>PapPet</string>
 		<key>shortDescription</key>
-		<string>Распространённая в России упаковка из пластика, популярная у заготовителей и переработчиков.</string>
+		<string>Композиционный материал: многослойная упаковка из бумаги (картона) и пластика</string>
 		<key>fullName</key>
-		<string>Полиэтилентерефталат</string>
+		<string>Бумага(картон) / Пластик</string>
 		<key>fullDescription</key>
-		<string>PET-упаковка бывает трёх видов:\n - Выдувная(банки и бутылки с характерной точкой на дне)\n- PET-коррекс (листовой пластик, из которого выдавливают упаковку типа контейнеров)\n- Плёнка.\nКаждая из разновидностей имеет разную плотность, поэтому перерабатывается отдельно друг от друга.Листовой PET и плёнку принимают намного реже и на это нужно обращать внимание при выборе пункта приёма.\n\nPET-бутылки от напитков собирают повсеместно — это наиболее популярный вид пластика у заготовителей «бытового» вторсырья, соперничать с которым могут разве что макулатура и металлы, поэтому PET-бутылки от напитков можно сдать во всех контейнерах и пунктах приёма, которые заявляют, что принимают пластик. Часто это вообще единственный вид пластика, который принимают.</string>
+		<string>Данный материал не относится к макулатуре, потому что для его переработки необходимо предварительно разделить все слои и переработать их отдельно. Несмотря на то, что такая упаковка отлично хранит продукты, и в теории данный материал возможно переработать, его производство и пераработка являются намного более сложными и дорогими процессами в сравнении с другими классическими материалами, а также образует довольно много промышленных отходов на этапе производст.\nПоэтому предпочтительнее будет упаковка из других материалов, которые легче перерабатываются (стекло, металл, популярные виды пластика).</string>
 		<key>anotherNames</key>
-		<string>PETE, ПЭТ, ПЭТФ</string>
+		<string>TetraPak, PurePak</string>
 		<key>examples</key>
-		<string>Бутылки для жидкостей (бытовой химии, напитков), контейнеров для еды (принимаются намного реже)</string>
+		<string>Упаковки для кондитерских изделий, упаковка некоторых видов молока</string>
 		<key>howToPrepare</key>
-		<string>- Помой упаковку\n- Сожми упаковку\n- Сними этикетки (по желанию)\n- Сними крышечки и кольца(по желанию)</string>
+		<string>- Разрежь и отогни все уголки, чтобы тщательно промыть упаковку\n- Компактно сложи\n- Сними крышки, горлышки (по желанию)</string>
+	</dict>
+	<dict>
+		<key>code</key>
+		<integer>84</integer>
+		<key>numberOfRecyclePoints</key>
+		<integer>0</integer>
+		<key>shortName</key>
+		<string>С/PAP</string>
+		<key>shortDescription</key>
+		<string>Композиционный материал: многослойная упаковка из бумаги (картона), пластика и алюминия</string>
+		<key>fullName</key>
+		<string>Бумага(картон) / Пластик / Алюминий</string>
+		<key>fullDescription</key>
+		<string>Данный материал не относится к макулатуре, потому что для его переработки необходимо предварительно разделить все слои и переработать их отдельно. Несмотря на то, что такая упаковка отлично хранит продукты, и в теории данный материал возможно переработать, его производство и пераработка являются намного более сложными и дорогими процессами в сравнении с другими классическими материалами, а также образует довольно много промышленных отходов на этапе производст.\nПоэтому предпочтительнее будет упаковка из других материалов, которые легче перерабатываются (стекло, металл, популярные виды пластика).</string>
+		<key>anotherNames</key>
+		<string>TetraPak, PurePak</string>
+		<key>examples</key>
+		<string>Упаковки для сока, некоторых видов молока</string>
+		<key>howToPrepare</key>
+		<string>- Разрежь и отогни все уголки, чтобы тщательно промыть упаковку\n- Компактно сложи\n- Сними крышки, горлышки (по желанию)</string>
 	</dict>
 </array>
 </plist>
