--- a/RecycleProject/Database/Metal.plist
+++ b/RecycleProject/Database/Metal.plist
@@ -4,23 +4,43 @@
 <array>
 	<dict>
 		<key>code</key>
-		<integer>1</integer>
+		<integer>40</integer>
 		<key>numberOfRecyclePoints</key>
 		<integer>0</integer>
 		<key>shortName</key>
-		<string>PET</string>
+		<string>FE</string>
 		<key>shortDescription</key>
-		<string>Распространённая в России упаковка из пластика, популярная у заготовителей и переработчиков.</string>
+		<string>Один из самых распространённых металлов, в упаковке чаще встречающийся в виде жести</string>
 		<key>fullName</key>
-		<string>Полиэтилентерефталат</string>
+		<string>Сталь</string>
 		<key>fullDescription</key>
-		<string>PET-упаковка бывает трёх видов:\n - Выдувная(банки и бутылки с характерной точкой на дне)\n- PET-коррекс (листовой пластик, из которого выдавливают упаковку типа контейнеров)\n- Плёнка.\nКаждая из разновидностей имеет разную плотность, поэтому перерабатывается отдельно друг от друга.Листовой PET и плёнку принимают намного реже и на это нужно обращать внимание при выборе пункта приёма.\n\nPET-бутылки от напитков собирают повсеместно — это наиболее популярный вид пластика у заготовителей «бытового» вторсырья, соперничать с которым могут разве что макулатура и металлы, поэтому PET-бутылки от напитков можно сдать во всех контейнерах и пунктах приёма, которые заявляют, что принимают пластик. Часто это вообще единственный вид пластика, который принимают.</string>
+		<string>Жесть - листы железа (стали) с покрытями из олова, лака, цинка и других материалов. Самый распространенный вид жести - белая жесть (т.н. луженая сталь). Применяется для изготовления консервных банок, проволоки и др.\nЛюбые железные изделия удобно отбирать на сортировочной станции с помощью магнита.\n\nДругой от жести переработки требуют баллончики из-под аэрозолей, газовые баллоны и огнетушители - об их сдаче нужно узнавать отдельно.</string>
 		<key>anotherNames</key>
-		<string>PETE, ПЭТ, ПЭТФ</string>
+		<string></string>
 		<key>examples</key>
-		<string>Бутылки для жидкостей (бытовой химии, напитков), контейнеров для еды (принимаются намного реже)</string>
+		<string>Металлические крышки от стеклянных банок, консервные банки, другие металлические предметы</string>
 		<key>howToPrepare</key>
-		<string>- Помой упаковку\n- Сожми упаковку\n- Сними этикетки (по желанию)\n- Сними крышечки и кольца(по желанию)</string>
+		<string>- Сполосни от остатков пищи\n- Убери этикетки, если это возможно\n- По возможности уменьши объем, сложи в плоскость\n- Сложи мелкие металлические предметы в другую металлическую емкость, чтобы они не рассыпались</string>
+	</dict>
+	<dict>
+		<key>code</key>
+		<integer>41</integer>
+		<key>numberOfRecyclePoints</key>
+		<integer>0</integer>
+		<key>shortName</key>
+		<string>ALU</string>
+		<key>shortDescription</key>
+		<string>Один из самых распространённых металлов, часто использующийся для упаковки напитков.</string>
+		<key>fullName</key>
+		<string>Алюминий</string>
+		<key>fullDescription</key>
+		<string>Алюминий является одним из самых безопасных металлов с точки зрения производства, так как наносит окружающей среде гораздо меньший урон, чем проивзодство большинства металлов. Также алюминий является самым часто перерабываемым материалом: он поддаётся 100% переработке, не утрачивая при этом своих уникальных свойств. Переработка плюминия требует всего 5% от объема энергии, необходимого для его производства.\n\nВажно: одноразовые контейнеры для продуктов, фольга и тюбики из алюминия перерабатываются иначе - об их сдаче нужно узнавать отдельно.</string>
+		<key>anotherNames</key>
+		<string></string>
+		<key>examples</key>
+		<string>Банки из-под напитков, другие металлические предметы</string>
+		<key>howToPrepare</key>
+		<string>- Сполосни от остатков пищи\n- Убери этикетки, если это возможно\n- По возможности уменьши объем, сложи в плоскость\n- Сложи мелкие металлические предметы в другую металлическую емкость, чтобы они не рассыпались</string>
 	</dict>
 </array>
 </plist>
