--- a/RecycleProject/Database/Glass.plist
+++ b/RecycleProject/Database/Glass.plist
@@ -4,23 +4,83 @@
 <array>
 	<dict>
 		<key>code</key>
-		<integer>1</integer>
+		<integer>70</integer>
 		<key>numberOfRecyclePoints</key>
 		<integer>0</integer>
 		<key>shortName</key>
-		<string>PET</string>
+		<string>GL</string>
 		<key>shortDescription</key>
-		<string>Распространённая в России упаковка из пластика, популярная у заготовителей и переработчиков.</string>
+		<string>Самая экологичная упаковка, которая может быть переработана на 100%, не теряя своих свойств.</string>
 		<key>fullName</key>
-		<string>Полиэтилентерефталат</string>
+		<string>Бесцветное стекло</string>
 		<key>fullDescription</key>
-		<string>PET-упаковка бывает трёх видов:\n - Выдувная(банки и бутылки с характерной точкой на дне)\n- PET-коррекс (листовой пластик, из которого выдавливают упаковку типа контейнеров)\n- Плёнка.\nКаждая из разновидностей имеет разную плотность, поэтому перерабатывается отдельно друг от друга.Листовой PET и плёнку принимают намного реже и на это нужно обращать внимание при выборе пункта приёма.\n\nPET-бутылки от напитков собирают повсеместно — это наиболее популярный вид пластика у заготовителей «бытового» вторсырья, соперничать с которым могут разве что макулатура и металлы, поэтому PET-бутылки от напитков можно сдать во всех контейнерах и пунктах приёма, которые заявляют, что принимают пластик. Часто это вообще единственный вид пластика, который принимают.</string>
+		<string>Стекло инертно, то есть оно не вступает во взаимодействие с окружающей средой и приносит наименьший вред на свалке относительно других материалов. В процессе разрушения измельчается снова на кварцевый песок.\n\nВажно: оконное стекло, битое стекло принимают не везде - об их сдаче нужно узнавать отдельно. Керамическая и стеклянная посуда, оптическое стекло, зеркала, хрусталь и лампочки не принимаются в переработку.</string>
 		<key>anotherNames</key>
-		<string>PETE, ПЭТ, ПЭТФ</string>
+		<string>GLS</string>
 		<key>examples</key>
-		<string>Бутылки для жидкостей (бытовой химии, напитков), контейнеров для еды (принимаются намного реже)</string>
+		<string>Бутылки и банки из-под напитков и продуктов</string>
 		<key>howToPrepare</key>
-		<string>- Помой упаковку\n- Сожми упаковку\n- Сними этикетки (по желанию)\n- Сними крышечки и кольца(по желанию)</string>
+		<string>- Сполосни от остатков пищи\n- Сними с банок крышки, пробки и другие посторонние материалы\n- Удали этикетки (по желанию)\n- Битое стекло(если его можно сдать) сложи отдельно</string>
+	</dict>
+	<dict>
+		<key>code</key>
+		<integer>71</integer>
+		<key>numberOfRecyclePoints</key>
+		<integer>0</integer>
+		<key>shortName</key>
+		<string>GL</string>
+		<key>shortDescription</key>
+		<string>Самая экологичная упаковка, которая может быть переработана на 100%, не теряя своих свойств.</string>
+		<key>fullName</key>
+		<string>Зелёное стекло</string>
+		<key>fullDescription</key>
+		<string>Стекло инертно, то есть оно не вступает во взаимодействие с окружающей средой и приносит наименьший вред на свалке относительно других материалов. В процессе разрушения измельчается снова на кварцевый песок.\n\nВажно: оконное стекло, битое стекло принимают не везде - об их сдаче нужно узнавать отдельно. Керамическая и стеклянная посуда, оптическое стекло, зеркала, хрусталь и лампочки не принимаются в переработку.</string>
+		<key>anotherNames</key>
+		<string>GLS</string>
+		<key>examples</key>
+		<string>Бутылки из-под напитков</string>
+		<key>howToPrepare</key>
+		<string>- Сполосни от остатков пищи\n- Сними с банок крышки, пробки и другие посторонние материалы\n- Удали этикетки (по желанию)\n- Битое стекло(если его можно сдать) сложи отдельно</string>
+	</dict>
+	<dict>
+		<key>code</key>
+		<integer>72</integer>
+		<key>numberOfRecyclePoints</key>
+		<integer>0</integer>
+		<key>shortName</key>
+		<string>GL</string>
+		<key>shortDescription</key>
+		<string>Самая экологичная упаковка, которая может быть переработана на 100%, не теряя своих свойств.</string>
+		<key>fullName</key>
+		<string>Коричневое стекло</string>
+		<key>fullDescription</key>
+		<string>Стекло инертно, то есть оно не вступает во взаимодействие с окружающей средой и приносит наименьший вред на свалке относительно других материалов. В процессе разрушения измельчается снова на кварцевый песок.\n\nВажно: оконное стекло, битое стекло принимают не везде - об их сдаче нужно узнавать отдельно. Керамическая и стеклянная посуда, оптическое стекло, зеркала, хрусталь и лампочки не принимаются в переработку.</string>
+		<key>anotherNames</key>
+		<string>GLS</string>
+		<key>examples</key>
+		<string>Бутылки из-под напитков</string>
+		<key>howToPrepare</key>
+		<string>- Сполосни от остатков пищи\n- Сними с банок крышки, пробки и другие посторонние материалы\n- Удали этикетки (по желанию)\n- Битое стекло(если его можно сдать) сложи отдельно</string>
+	</dict>
+	<dict>
+		<key>code</key>
+		<integer>74</integer>
+		<key>numberOfRecyclePoints</key>
+		<integer>0</integer>
+		<key>shortName</key>
+		<string>GL</string>
+		<key>shortDescription</key>
+		<string>Самая экологичная упаковка, которая может быть переработана на 100%, не теряя своих свойств.</string>
+		<key>fullName</key>
+		<string>Тёмно-коричневое стекло</string>
+		<key>fullDescription</key>
+		<string>Стекло инертно, то есть оно не вступает во взаимодействие с окружающей средой и приносит наименьший вред на свалке относительно других материалов. В процессе разрушения измельчается снова на кварцевый песок.\n\nВажно: оконное стекло, битое стекло принимают не везде - об их сдаче нужно узнавать отдельно. Керамическая и стеклянная посуда, оптическое стекло, зеркала, хрусталь и лампочки не принимаются в переработку.</string>
+		<key>anotherNames</key>
+		<string>GLS</string>
+		<key>examples</key>
+		<string>Бутылки из-под напитков, флаконы </string>
+		<key>howToPrepare</key>
+		<string>- Сполосни от остатков пищи\n- Сними с банок крышки, пробки и другие посторонние материалы\n- Удали этикетки (по желанию)\n- Битое стекло(если его можно сдать) сложи отдельно</string>
 	</dict>
 </array>
 </plist>
