--- a/RecycleProject/Database/Other.plist
+++ b/RecycleProject/Database/Other.plist
@@ -12,11 +12,11 @@
 		<key>shortName</key>
 		<string>Кофейные стаканчики</string>
 		<key>shortDescription</key>
-		<string></string>
+		<string>Они не перерабатываются</string>
 		<key>fullName</key>
 		<string></string>
 		<key>fullDescription</key>
-		<string></string>
+		<string>СОВСЕМ НЕ ПЕРЕРАБАТЫВАЮТСЯ</string>
 		<key>anotherNames</key>
 		<string></string>
 		<key>examples</key>
