Work with data, add labels checking

--- a/RecycleProject/Database/Composite.plist
+++ b/RecycleProject/Database/Composite.plist
@@ -14,13 +14,17 @@
 		<key>fullName</key>
 		<string>Бумага(картон) / Пластик</string>
 		<key>fullDescription</key>
-		<string>Данный материал не относится к макулатуре, потому что для его переработки необходимо предварительно разделить все слои и переработать их отдельно. Несмотря на то, что такая упаковка отлично хранит продукты, и в теории данный материал возможно переработать, его производство и пераработка являются намного более сложными и дорогими процессами в сравнении с другими классическими материалами, а также образует довольно много промышленных отходов на этапе производст.\nПоэтому предпочтительнее будет упаковка из других материалов, которые легче перерабатываются (стекло, металл, популярные виды пластика).</string>
+		<string>Данный материал не относится к макулатуре, потому что для его переработки необходимо предварительно разделить все слои и переработать их отдельно. Несмотря на то, что такая упаковка отлично хранит продукты, и в теории данный материал возможно переработать, его производство и пераработка являются намного более сложными и дорогими процессами в сравнении с другими классическими материалами, а также образует довольно много промышленных отходов на этапе производст.
+
+Поэтому предпочтительнее будет упаковка из других материалов, которые легче перерабатываются (стекло, металл, популярные виды пластика).</string>
 		<key>anotherNames</key>
 		<string>TetraPak, PurePak</string>
 		<key>examples</key>
 		<string>Упаковки для кондитерских изделий, упаковка некоторых видов молока</string>
 		<key>howToPrepare</key>
-		<string>- Разрежь и отогни все уголки, чтобы тщательно промыть упаковку\n- Компактно сложи\n- Сними крышки, горлышки (по желанию)</string>
+		<string>- Разрежь и отогни все уголки, чтобы тщательно промыть упаковку
+- Компактно сложи
+- Сними крышки, горлышки (по желанию)</string>
 	</dict>
 	<dict>
 		<key>code</key>
@@ -34,13 +38,17 @@
 		<key>fullName</key>
 		<string>Бумага(картон) / Пластик / Алюминий</string>
 		<key>fullDescription</key>
-		<string>Данный материал не относится к макулатуре, потому что для его переработки необходимо предварительно разделить все слои и переработать их отдельно. Несмотря на то, что такая упаковка отлично хранит продукты, и в теории данный материал возможно переработать, его производство и пераработка являются намного более сложными и дорогими процессами в сравнении с другими классическими материалами, а также образует довольно много промышленных отходов на этапе производст.\nПоэтому предпочтительнее будет упаковка из других материалов, которые легче перерабатываются (стекло, металл, популярные виды пластика).</string>
+		<string>Данный материал не относится к макулатуре, потому что для его переработки необходимо предварительно разделить все слои и переработать их отдельно. Несмотря на то, что такая упаковка отлично хранит продукты, и в теории данный материал возможно переработать, его производство и пераработка являются намного более сложными и дорогими процессами в сравнении с другими классическими материалами, а также образует довольно много промышленных отходов на этапе производст.
+
+Поэтому предпочтительнее будет упаковка из других материалов, которые легче перерабатываются (стекло, металл, популярные виды пластика).</string>
 		<key>anotherNames</key>
 		<string>TetraPak, PurePak</string>
 		<key>examples</key>
 		<string>Упаковки для сока, некоторых видов молока</string>
 		<key>howToPrepare</key>
-		<string>- Разрежь и отогни все уголки, чтобы тщательно промыть упаковку\n- Компактно сложи\n- Сними крышки, горлышки (по желанию)</string>
+		<string>- Разрежь и отогни все уголки, чтобы тщательно промыть упаковку
+- Компактно сложи
+- Сними крышки, горлышки (по желанию)</string>
 	</dict>
 </array>
 </plist>
