--- a/RecycleProject/Database/Glass.plist
+++ b/RecycleProject/Database/Glass.plist
@@ -14,13 +14,18 @@
 		<key>fullName</key>
 		<string>Бесцветное стекло</string>
 		<key>fullDescription</key>
-		<string>Стекло инертно, то есть оно не вступает во взаимодействие с окружающей средой и приносит наименьший вред на свалке относительно других материалов. В процессе разрушения измельчается снова на кварцевый песок.\n\nВажно: оконное стекло, битое стекло принимают не везде - об их сдаче нужно узнавать отдельно. Керамическая и стеклянная посуда, оптическое стекло, зеркала, хрусталь и лампочки не принимаются в переработку.</string>
+		<string>Стекло инертно, то есть оно не вступает во взаимодействие с окружающей средой и приносит наименьший вред на свалке относительно других материалов. В процессе разрушения измельчается снова на кварцевый песок.
+
+Важно: оконное стекло, битое стекло принимают не везде - об их сдаче нужно узнавать отдельно. Керамическая и стеклянная посуда, оптическое стекло, зеркала, хрусталь и лампочки не принимаются в переработку.</string>
 		<key>anotherNames</key>
 		<string>GLS</string>
 		<key>examples</key>
 		<string>Бутылки и банки из-под напитков и продуктов</string>
 		<key>howToPrepare</key>
-		<string>- Сполосни от остатков пищи\n- Сними с банок крышки, пробки и другие посторонние материалы\n- Удали этикетки (по желанию)\n- Битое стекло(если его можно сдать) сложи отдельно</string>
+		<string>- Сполосни от остатков пищи
+- Сними с банок крышки, пробки и другие посторонние материалы
+- Удали этикетки (по желанию)
+- Битое стекло(если его можно сдать) сложи отдельно</string>
 	</dict>
 	<dict>
 		<key>code</key>
@@ -34,13 +39,18 @@
 		<key>fullName</key>
 		<string>Зелёное стекло</string>
 		<key>fullDescription</key>
-		<string>Стекло инертно, то есть оно не вступает во взаимодействие с окружающей средой и приносит наименьший вред на свалке относительно других материалов. В процессе разрушения измельчается снова на кварцевый песок.\n\nВажно: оконное стекло, битое стекло принимают не везде - об их сдаче нужно узнавать отдельно. Керамическая и стеклянная посуда, оптическое стекло, зеркала, хрусталь и лампочки не принимаются в переработку.</string>
+		<string>Стекло инертно, то есть оно не вступает во взаимодействие с окружающей средой и приносит наименьший вред на свалке относительно других материалов. В процессе разрушения измельчается снова на кварцевый песок.
+
+Важно: оконное стекло, битое стекло принимают не везде - об их сдаче нужно узнавать отдельно. Керамическая и стеклянная посуда, оптическое стекло, зеркала, хрусталь и лампочки не принимаются в переработку.</string>
 		<key>anotherNames</key>
 		<string>GLS</string>
 		<key>examples</key>
 		<string>Бутылки из-под напитков</string>
 		<key>howToPrepare</key>
-		<string>- Сполосни от остатков пищи\n- Сними с банок крышки, пробки и другие посторонние материалы\n- Удали этикетки (по желанию)\n- Битое стекло(если его можно сдать) сложи отдельно</string>
+		<string>- Сполосни от остатков пищи
+- Сними с банок крышки, пробки и другие посторонние материалы
+- Удали этикетки (по желанию)
+- Битое стекло(если его можно сдать) сложи отдельно</string>
 	</dict>
 	<dict>
 		<key>code</key>
@@ -54,13 +64,18 @@
 		<key>fullName</key>
 		<string>Коричневое стекло</string>
 		<key>fullDescription</key>
-		<string>Стекло инертно, то есть оно не вступает во взаимодействие с окружающей средой и приносит наименьший вред на свалке относительно других материалов. В процессе разрушения измельчается снова на кварцевый песок.\n\nВажно: оконное стекло, битое стекло принимают не везде - об их сдаче нужно узнавать отдельно. Керамическая и стеклянная посуда, оптическое стекло, зеркала, хрусталь и лампочки не принимаются в переработку.</string>
+		<string>Стекло инертно, то есть оно не вступает во взаимодействие с окружающей средой и приносит наименьший вред на свалке относительно других материалов. В процессе разрушения измельчается снова на кварцевый песок.
+
+Важно: оконное стекло, битое стекло принимают не везде - об их сдаче нужно узнавать отдельно. Керамическая и стеклянная посуда, оптическое стекло, зеркала, хрусталь и лампочки не принимаются в переработку.</string>
 		<key>anotherNames</key>
 		<string>GLS</string>
 		<key>examples</key>
 		<string>Бутылки из-под напитков</string>
 		<key>howToPrepare</key>
-		<string>- Сполосни от остатков пищи\n- Сними с банок крышки, пробки и другие посторонние материалы\n- Удали этикетки (по желанию)\n- Битое стекло(если его можно сдать) сложи отдельно</string>
+		<string>- Сполосни от остатков пищи
+- Сними с банок крышки, пробки и другие посторонние материалы
+- Удали этикетки (по желанию)
+- Битое стекло(если его можно сдать) сложи отдельно</string>
 	</dict>
 	<dict>
 		<key>code</key>
@@ -74,13 +89,18 @@
 		<key>fullName</key>
 		<string>Тёмно-коричневое стекло</string>
 		<key>fullDescription</key>
-		<string>Стекло инертно, то есть оно не вступает во взаимодействие с окружающей средой и приносит наименьший вред на свалке относительно других материалов. В процессе разрушения измельчается снова на кварцевый песок.\n\nВажно: оконное стекло, битое стекло принимают не везде - об их сдаче нужно узнавать отдельно. Керамическая и стеклянная посуда, оптическое стекло, зеркала, хрусталь и лампочки не принимаются в переработку.</string>
+		<string>Стекло инертно, то есть оно не вступает во взаимодействие с окружающей средой и приносит наименьший вред на свалке относительно других материалов. В процессе разрушения измельчается снова на кварцевый песок.
+
+Важно: оконное стекло, битое стекло принимают не везде - об их сдаче нужно узнавать отдельно. Керамическая и стеклянная посуда, оптическое стекло, зеркала, хрусталь и лампочки не принимаются в переработку.</string>
 		<key>anotherNames</key>
 		<string>GLS</string>
 		<key>examples</key>
 		<string>Бутылки из-под напитков, флаконы </string>
 		<key>howToPrepare</key>
-		<string>- Сполосни от остатков пищи\n- Сними с банок крышки, пробки и другие посторонние материалы\n- Удали этикетки (по желанию)\n- Битое стекло(если его можно сдать) сложи отдельно</string>
+		<string>- Сполосни от остатков пищи
+- Сними с банок крышки, пробки и другие посторонние материалы
+- Удали этикетки (по желанию)
+- Битое стекло(если его можно сдать) сложи отдельно</string>
 	</dict>
 </array>
 </plist>
