--- a/RecycleProject/Database/Plastic.plist
+++ b/RecycleProject/Database/Plastic.plist
@@ -14,13 +14,22 @@
 		<key>fullName</key>
 		<string>Полиэтилентерефталат</string>
 		<key>fullDescription</key>
-		<string>PET-упаковка бывает трёх видов:\n - Выдувная(банки и бутылки с характерной точкой на дне)\n- PET-коррекс (листовой пластик, из которого выдавливают упаковку типа контейнеров)\n- Плёнка.\nКаждая из разновидностей имеет разную плотность, поэтому перерабатывается отдельно друг от друга.Листовой PET и плёнку принимают намного реже и на это нужно обращать внимание при выборе пункта приёма.\n\nPET-бутылки от напитков собирают повсеместно — это наиболее популярный вид пластика у заготовителей «бытового» вторсырья, соперничать с которым могут разве что макулатура и металлы, поэтому PET-бутылки от напитков можно сдать во всех контейнерах и пунктах приёма, которые заявляют, что принимают пластик. Часто это вообще единственный вид пластика, который принимают.</string>
+		<string>PET-упаковка бывает трёх видов:
+- Выдувная(банки и бутылки с характерной точкой на дне)
+- PET-коррекс (листовой пластик, из которого выдавливают упаковку типа контейнеров)
+- Плёнка
+Каждая из разновидностей имеет разную плотность, поэтому перерабатывается отдельно друг от друга.Листовой PET и плёнку принимают намного реже и на это нужно обращать внимание при выборе пункта приёма.
+
+PET-бутылки от напитков собирают повсеместно — это наиболее популярный вид пластика у заготовителей «бытового» вторсырья, соперничать с которым могут разве что макулатура и металлы, поэтому PET-бутылки от напитков можно сдать во всех контейнерах и пунктах приёма, которые заявляют, что принимают пластик. Часто это вообще единственный вид пластика, который принимают.</string>
 		<key>anotherNames</key>
 		<string>PETE, ПЭТ, ПЭТФ</string>
 		<key>examples</key>
 		<string>Бутылки для жидкостей (бытовой химии, напитков), контейнеров для еды (принимаются намного реже)</string>
 		<key>howToPrepare</key>
-		<string>- Помой упаковку\n- Сожми упаковку\n- Сними этикетки (по желанию)\n- Сними крышечки и кольца(по желанию)</string>
+		<string>- Помой упаковку
+- Сожми упаковку
+- Сними этикетки (по желанию)
+- Сними крышечки и кольца(по желанию)</string>
 	</dict>
 	<dict>
 		<key>code</key>
@@ -40,7 +49,10 @@
 		<key>examples</key>
 		<string>Бутылки и флаконы для жидкостей (напитки, косметика, бытовая химия), крышки и кольца от бутылок, канистры, мусорные вёдра</string>
 		<key>howToPrepare</key>
-		<string>- Помой упаковку\n- Сожми упаковку\n- Сними этикетки (по желанию)\n- Сними крышечки и кольца(по желанию)</string>
+		<string>- Помой упаковку
+- Сожми упаковку
+- Сними этикетки (по желанию)
+- Сними крышечки и кольца(по желанию)</string>
 	</dict>
 	<dict>
 		<key>code</key>
@@ -56,7 +68,11 @@
 		<key>fullName</key>
 		<string>Поливинилхлорид</string>
 		<key>fullDescription</key>
-		<string>В зависимости от содержания пластификаторов, PVC может быть двух видов:\n- Пластикат. Этот тип мягкого PVC содержит пластификатор, придающий ему гибкость. Из него изготавливают пленки, напольные покрытия, PVC сапоги и т.д.\n- Винипласт. Жесткий тип пластмассы в основном применяется в строительстве, а также для производства оконного профиля и труб.\n\nСуществует мнение, что пластик PVC переработать нельзя. Это не так.В России есть технологии и предприятия, перерабатывающие сложные виды пластика, просто вся эта отрасль работает на отходах производств, складов, магазинов (обрезки, брак и т.п.), то есть с большими объемами одинакового вида отходов.Пластиковые отходы от физических лиц разнообразны. Даже если они вручную рассортированы, нет гарантии, что всё будет точно нужного вида пластика</string>
+		<string>В зависимости от содержания пластификаторов, PVC может быть двух видов:
+- Пластикат. Этот тип мягкого PVC содержит пластификатор, придающий ему гибкость. Из него изготавливают пленки, напольные покрытия, PVC сапоги и т.д.
+- Винипласт. Жесткий тип пластмассы в основном применяется в строительстве, а также для производства оконного профиля и труб.
+
+Существует мнение, что пластик PVC переработать нельзя. Это не так.В России есть технологии и предприятия, перерабатывающие сложные виды пластика, просто вся эта отрасль работает на отходах производств, складов, магазинов (обрезки, брак и т.п.), то есть с большими объемами одинакового вида отходов.Пластиковые отходы от физических лиц разнообразны. Даже если они вручную рассортированы, нет гарантии, что всё будет точно нужного вида пластика</string>
 		<key>examples</key>
 		<string>Оконные рамы, бутылки для химических продуктов, изоляция электропроводов и кабелей, искусственная кожа</string>
 		<key>howToPrepare</key>
@@ -97,7 +113,8 @@
 		<key>fullName</key>
 		<string>Полипропилен</string>
 		<key>fullDescription</key>
-		<string>Из-за разнообразия тары из полипропилена и её схожести с тарой из полистирола заготовители сырья неохотно берут эти два вида пластика на переработку. К тому же, сначала надо собрать достаточно большой объём пластика (несколько тонн), а после этого отправить на завод по переработке. На данный момент полипропилен занимает 2-е место в мире среди полимеров по объёму потребления, с долей 26% уступая только полиэтилену (пластики 02 и 04). \n\nПолипропилен может быть мягким(пакеты) и твёрдым(крышки, тара), то есть иметь разную плотность, поэтому они перерабатываются разными методами и сдаются отдельно друг от друга</string>
+		<string>Из-за разнообразия тары из полипропилена и её схожести с тарой из полистирола заготовители сырья неохотно берут эти два вида пластика на переработку. К тому же, сначала надо собрать достаточно большой объём пластика (несколько тонн), а после этого отправить на завод по переработке. На данный момент полипропилен занимает 2-е место в мире среди полимеров по объёму потребления, с долей 26% уступая только полиэтилену (пластики 02 и 04). 
+Полипропилен может быть мягким(пакеты) и твёрдым(крышки, тара), то есть иметь разную плотность, поэтому они перерабатываются разными методами и сдаются отдельно друг от друга</string>
 		<key>examples</key>
 		<string>Пластиковые стаканы для воды, упаковка из-под снеков или круп, корпуса бытовой техники и электроинструментов, крышки от тары</string>
 		<key>howToPrepare</key>
@@ -117,11 +134,16 @@
 		<key>fullName</key>
 		<string>Полистирол</string>
 		<key>fullDescription</key>
-		<string>Из-за разнообразия тары из полипропилена и её схожести с тарой из полистирола заготовители сырья неохотно берут эти два вида пластика на переработку. К тому же сначала надо собрать достаточно большой объём пластика (несколько тонн), а после этого отправить на завод по переработке. К тому же, вспененный полистирол (часто называемый пенопластом) очень мало весит и занимает большой объём, плохо прессуется, поэтому в масштабах небольших пунктов приёма очень не рентабелен, хотя и перерабатывается.\n\nПолистирол может быть вспененным (поддоны из-под продуктов, пенопласт) и твёрдым (тара, крышки), то есть иметь разную плотность, поэтому они перерабатываются разными методами и сдаются отдельно друг от друга</string>
+		<string>Из-за разнообразия тары из полипропилена и её схожести с тарой из полистирола заготовители сырья неохотно берут эти два вида пластика на переработку. К тому же сначала надо собрать достаточно большой объём пластика (несколько тонн), а после этого отправить на завод по переработке. К тому же, вспененный полистирол (часто называемый пенопластом) очень мало весит и занимает большой объём, плохо прессуется, поэтому в масштабах небольших пунктов приёма очень не рентабелен, хотя и перерабатывается.
+
+Полистирол может быть вспененным (поддоны из-под продуктов, пенопласт) и твёрдым (тара, крышки), то есть иметь разную плотность, поэтому они перерабатываются разными методами и сдаются отдельно друг от друга</string>
 		<key>examples</key>
 		<string>Одноразовая посуда, одноразовые стаканы для воды, поддоны из-под продуктов, упаковочный пенопласт</string>
 		<key>howToPrepare</key>
-		<string>- Помой упаковку\n- Сожми упаковку\n- Сними этикетки (по желанию)\n- Сними крышечки и кольца(по желанию)</string>
+		<string>- Помой упаковку
+- Сожми упаковку
+- Сними этикетки (по желанию)
+- Сними крышечки и кольца(по желанию)</string>
 	</dict>
 	<dict>
 		<key>code</key>
