--- a/RecycleProject/Database/Wastepaper.plist
+++ b/RecycleProject/Database/Wastepaper.plist
@@ -14,13 +14,18 @@
 		<key>fullName</key>
 		<string>Гофрированный картон</string>
 		<key>fullDescription</key>
-		<string>Макулатура бывает разных видов. Классификация видов макулатуры на группы, марки и сорта обеспечивает взаимопонимание между поставщиками и потребителями макулатуры. Кроме этого, каждой марке макулатуры соответствует свое направление переработки.\nДля переработки бумаги нужно в два раза меньше воды, чем для новой.\nИз переработанной макулатуры можно получить новую чистую бумагу, тару (всем известные кассеты для яиц) и даже строительные материалы: эковату и волокнистые плиты (для внутренней отделки помещений). \n\nВажно: чеки, фотобумага, обои, коробки из под соков и молока, и другие похожие на бумагу упаковки без должной маркировки не считаются макулатурой и принимаются отдельно либо не принимаются вообще</string>
+		<string>Макулатура бывает разных видов. Классификация видов макулатуры на группы, марки и сорта обеспечивает взаимопонимание между поставщиками и потребителями макулатуры. Кроме этого, каждой марке макулатуры соответствует свое направление переработки.
+Для переработки бумаги нужно в два раза меньше воды, чем для новой.\nИз переработанной макулатуры можно получить новую чистую бумагу, тару (всем известные кассеты для яиц) и даже строительные материалы: эковату и волокнистые плиты (для внутренней отделки помещений). 
+Важно: чеки, фотобумага, обои, коробки из под соков и молока, и другие похожие на бумагу упаковки без должной маркировки не считаются макулатурой и принимаются отдельно либо не принимаются вообще</string>
 		<key>anotherNames</key>
 		<string>PCB</string>
 		<key>examples</key>
 		<string>Коробки от бытовой техники, продуктов, косметики</string>
 		<key>howToPrepare</key>
-		<string>-Убедись в отстуствии ламинации(тонкой плёнки): надорви край изделия, чтобы проверить это\n- Удали лишние пластиковые и металлические элементы (пружины, скрепки, ручки, плёнку, скотч)\n- Обязательно убедись в отсутствии пищевых пищевых отходов и грязи (жира, масла) на макулатуре - такая макулатура не принимается\n- Постарайся собрать всю макулатуру так, чтобы она занимала меньше места (Сложи коробки в плоскость, собери всё в кипы или сложи в одну коробку)</string>
+		<string>-Убедись в отстуствии ламинации(тонкой плёнки): надорви край изделия, чтобы проверить это
+- Удали лишние пластиковые и металлические элементы (пружины, скрепки, ручки, плёнку, скотч)
+- Обязательно убедись в отсутствии пищевых пищевых отходов и грязи (жира, масла) на макулатуре - такая макулатура не принимается
+- Постарайся собрать всю макулатуру так, чтобы она занимала меньше места (Сложи коробки в плоскость, собери всё в кипы или сложи в одну коробку)</string>
 	</dict>
 	<dict>
 		<key>code</key>
@@ -34,13 +39,18 @@
 		<key>fullName</key>
 		<string>Прочий картон</string>
 		<key>fullDescription</key>
-		<string>Макулатура бывает разных видов. Классификация видов макулатуры на группы, марки и сорта обеспечивает взаимопонимание между поставщиками и потребителями макулатуры. Кроме этого, каждой марке макулатуры соответствует свое направление переработки.\nДля переработки бумаги нужно в два раза меньше воды, чем для новой.\nИз переработанной макулатуры можно получить новую чистую бумагу, тару (всем известные кассеты для яиц) и даже строительные материалы: эковату и волокнистые плиты (для внутренней отделки помещений). \n\nВажно: чеки, фотобумага, обои, коробки из под соков и молока, и другие похожие на бумагу упаковки без должной маркировки не считаются макулатурой и принимаются отдельно либо не принимаются вообще</string>
+		<string>Макулатура бывает разных видов. Классификация видов макулатуры на группы, марки и сорта обеспечивает взаимопонимание между поставщиками и потребителями макулатуры. Кроме этого, каждой марке макулатуры соответствует свое направление переработки.
+Для переработки бумаги нужно в два раза меньше воды, чем для новой.\nИз переработанной макулатуры можно получить новую чистую бумагу, тару (всем известные кассеты для яиц) и даже строительные материалы: эковату и волокнистые плиты (для внутренней отделки помещений). 
+Важно: чеки, фотобумага, обои, коробки из под соков и молока, и другие похожие на бумагу упаковки без должной маркировки не считаются макулатурой и принимаются отдельно либо не принимаются вообще</string>
 		<key>anotherNames</key>
 		<string></string>
 		<key>examples</key>
 		<string>Открытки, обложки книг, короб-упаковка</string>
 		<key>howToPrepare</key>
-		<string>-Убедись в отстуствии ламинации(тонкой плёнки): надорви край изделия, чтобы проверить это\n- Удали лишние пластиковые и металлические элементы (пружины, скрепки, ручки, плёнку, скотч)\n- Обязательно убедись в отсутствии пищевых пищевых отходов и грязи (жира, масла) на макулатуре - такая макулатура не принимается\n- Постарайся собрать всю макулатуру так, чтобы она занимала меньше места (Сложи коробки в плоскость, собери всё в кипы или сложи в одну коробку)</string>
+		<string>-Убедись в отстуствии ламинации(тонкой плёнки): надорви край изделия, чтобы проверить это
+- Удали лишние пластиковые и металлические элементы (пружины, скрепки, ручки, плёнку, скотч)
+- Обязательно убедись в отсутствии пищевых пищевых отходов и грязи (жира, масла) на макулатуре - такая макулатура не принимается
+- Постарайся собрать всю макулатуру так, чтобы она занимала меньше места (Сложи коробки в плоскость, собери всё в кипы или сложи в одну коробку)</string>
 	</dict>
 	<dict>
 		<key>code</key>
@@ -54,13 +64,18 @@
 		<key>fullName</key>
 		<string>Бумага</string>
 		<key>fullDescription</key>
-		<string>Макулатура бывает разных видов. Классификация видов макулатуры на группы, марки и сорта обеспечивает взаимопонимание между поставщиками и потребителями макулатуры. Кроме этого, каждой марке макулатуры соответствует свое направление переработки.\nДля переработки бумаги нужно в два раза меньше воды, чем для новой.\nИз переработанной макулатуры можно получить новую чистую бумагу, тару (всем известные кассеты для яиц) и даже строительные материалы: эковату и волокнистые плиты (для внутренней отделки помещений). \n\nВажно: чеки, фотобумага, обои, коробки из под соков и молока, и другие похожие на бумагу упаковки без должной маркировки не считаются макулатурой и принимаются отдельно либо не принимаются вообще</string>
+		<string>Макулатура бывает разных видов. Классификация видов макулатуры на группы, марки и сорта обеспечивает взаимопонимание между поставщиками и потребителями макулатуры. Кроме этого, каждой марке макулатуры соответствует свое направление переработки.
+Для переработки бумаги нужно в два раза меньше воды, чем для новой.\nИз переработанной макулатуры можно получить новую чистую бумагу, тару (всем известные кассеты для яиц) и даже строительные материалы: эковату и волокнистые плиты (для внутренней отделки помещений). 
+Важно: чеки, фотобумага, обои, коробки из под соков и молока, и другие похожие на бумагу упаковки без должной маркировки не считаются макулатурой и принимаются отдельно либо не принимаются вообще</string>
 		<key>anotherNames</key>
 		<string></string>
 		<key>examples</key>
 		<string>Журналы и газеты, конверты, бумажные пакеты, бумага для печати</string>
 		<key>howToPrepare</key>
-		<string>-Убедись в отстуствии ламинации(тонкой плёнки): надорви край изделия, чтобы проверить это\n- Удали лишние пластиковые и металлические элементы (пружины, скрепки, ручки, плёнку, скотч)\n- Обязательно убедись в отсутствии пищевых пищевых отходов и грязи (жира, масла) на макулатуре - такая макулатура не принимается\n- Постарайся собрать всю макулатуру так, чтобы она занимала меньше места (Сложи коробки в плоскость, собери всё в кипы или сложи в одну коробку)</string>
+		<string>-Убедись в отстуствии ламинации(тонкой плёнки): надорви край изделия, чтобы проверить это
+- Удали лишние пластиковые и металлические элементы (пружины, скрепки, ручки, плёнку, скотч)
+- Обязательно убедись в отсутствии пищевых пищевых отходов и грязи (жира, масла) на макулатуре - такая макулатура не принимается
+- Постарайся собрать всю макулатуру так, чтобы она занимала меньше места (Сложи коробки в плоскость, собери всё в кипы или сложи в одну коробку)</string>
 	</dict>
 	<dict>
 		<key>code</key>
