--- a/RecycleProject/Database/Metal.plist
+++ b/RecycleProject/Database/Metal.plist
@@ -14,13 +14,19 @@
 		<key>fullName</key>
 		<string>Сталь</string>
 		<key>fullDescription</key>
-		<string>Жесть - листы железа (стали) с покрытями из олова, лака, цинка и других материалов. Самый распространенный вид жести - белая жесть (т.н. луженая сталь). Применяется для изготовления консервных банок, проволоки и др.\nЛюбые железные изделия удобно отбирать на сортировочной станции с помощью магнита.\n\nДругой от жести переработки требуют баллончики из-под аэрозолей, газовые баллоны и огнетушители - об их сдаче нужно узнавать отдельно.</string>
+		<string>Жесть - листы железа (стали) с покрытями из олова, лака, цинка и других материалов. Самый распространенный вид жести - белая жесть (т.н. луженая сталь). Применяется для изготовления консервных банок, проволоки и др.
+Любые железные изделия удобно отбирать на сортировочной станции с помощью магнита.
+
+Другой от жести переработки требуют баллончики из-под аэрозолей, газовые баллоны и огнетушители - об их сдаче нужно узнавать отдельно.</string>
 		<key>anotherNames</key>
 		<string></string>
 		<key>examples</key>
 		<string>Металлические крышки от стеклянных банок, консервные банки, другие металлические предметы</string>
 		<key>howToPrepare</key>
-		<string>- Сполосни от остатков пищи\n- Убери этикетки, если это возможно\n- По возможности уменьши объем, сложи в плоскость\n- Сложи мелкие металлические предметы в другую металлическую емкость, чтобы они не рассыпались</string>
+		<string>- Сполосни от остатков пищи
+- Убери этикетки, если это возможно
+- По возможности уменьши объем, сложи в плоскость
+- Сложи мелкие металлические предметы в другую металлическую емкость, чтобы они не рассыпались</string>
 	</dict>
 	<dict>
 		<key>code</key>
@@ -34,13 +40,18 @@
 		<key>fullName</key>
 		<string>Алюминий</string>
 		<key>fullDescription</key>
-		<string>Алюминий является одним из самых безопасных металлов с точки зрения производства, так как наносит окружающей среде гораздо меньший урон, чем проивзодство большинства металлов. Также алюминий является самым часто перерабываемым материалом: он поддаётся 100% переработке, не утрачивая при этом своих уникальных свойств. Переработка плюминия требует всего 5% от объема энергии, необходимого для его производства.\n\nВажно: одноразовые контейнеры для продуктов, фольга и тюбики из алюминия перерабатываются иначе - об их сдаче нужно узнавать отдельно.</string>
+		<string>Алюминий является одним из самых безопасных металлов с точки зрения производства, так как наносит окружающей среде гораздо меньший урон, чем проивзодство большинства металлов. Также алюминий является самым часто перерабываемым материалом: он поддаётся 100% переработке, не утрачивая при этом своих уникальных свойств. Переработка плюминия требует всего 5% от объема энергии, необходимого для его производства.
+
+Важно: одноразовые контейнеры для продуктов, фольга и тюбики из алюминия перерабатываются иначе - об их сдаче нужно узнавать отдельно.</string>
 		<key>anotherNames</key>
 		<string></string>
 		<key>examples</key>
 		<string>Банки из-под напитков, другие металлические предметы</string>
 		<key>howToPrepare</key>
-		<string>- Сполосни от остатков пищи\n- Убери этикетки, если это возможно\n- По возможности уменьши объем, сложи в плоскость\n- Сложи мелкие металлические предметы в другую металлическую емкость, чтобы они не рассыпались</string>
+		<string>- Сполосни от остатков пищи
+- Убери этикетки, если это возможно
+- По возможности уменьши объем, сложи в плоскость
+- Сложи мелкие металлические предметы в другую металлическую емкость, чтобы они не рассыпались</string>
 	</dict>
 </array>
 </plist>
